; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_vnode_associate_extattr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_vnode_associate_extattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }
%struct.vnode = type { i32 }
%struct.label = type { i32 }

@MAGIC_MOUNT = common dso_local global i32 0, align 4
@MAGIC_VNODE = common dso_local global i32 0, align 4
@vnode_associate_extattr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mount*, %struct.label*, %struct.vnode*, %struct.label*)* @test_vnode_associate_extattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_vnode_associate_extattr(%struct.mount* %0, %struct.label* %1, %struct.vnode* %2, %struct.label* %3) #0 {
  %5 = alloca %struct.mount*, align 8
  %6 = alloca %struct.label*, align 8
  %7 = alloca %struct.vnode*, align 8
  %8 = alloca %struct.label*, align 8
  store %struct.mount* %0, %struct.mount** %5, align 8
  store %struct.label* %1, %struct.label** %6, align 8
  store %struct.vnode* %2, %struct.vnode** %7, align 8
  store %struct.label* %3, %struct.label** %8, align 8
  %9 = load %struct.label*, %struct.label** %6, align 8
  %10 = load i32, i32* @MAGIC_MOUNT, align 4
  %11 = call i32 @LABEL_CHECK(%struct.label* %9, i32 %10)
  %12 = load %struct.label*, %struct.label** %8, align 8
  %13 = load i32, i32* @MAGIC_VNODE, align 4
  %14 = call i32 @LABEL_CHECK(%struct.label* %12, i32 %13)
  %15 = load i32, i32* @vnode_associate_extattr, align 4
  %16 = call i32 @COUNTER_INC(i32 %15)
  ret i32 0
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
